リスト用テーブル作成

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
   </head>
   <body>
     <div id="app">
-
+      <table>
+        <thead>
+          <tr>
+            <th class="id">ID</th>
+            <th class="task">タスク</th>
+            <th class="state">状態</th>
+            <th class="button">-</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- ここにTodoの要素の<tr>を繰り返し処理 -->
+        </tbody>
+      </table>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
