--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </thead>
         <tbody>
           <!-- ここに <tr> で ToDo の要素を1行づつ繰り返し表示 -->
-          <tr v-for="task in tasks" v-bind:key="task.id">
-            <th>{{ task.id }}</th>
-            <td>{{ task.task }}</td>
+          <tr v-for="item in tasks" v-bind:key="item.id">
+            <th>{{ item.id }}</th>
+            <td>{{ item.task }}</td>
             <td class="state">
               <!-- 状態変更ボタンのモック -->
-              <button>{{ task.state }}</button>
+              <button>{{ item.state }}</button>
             </td>
             <td class="button">
               <!-- 削除ボタンのモック -->
