タスクの状態変更機能の追加

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <td>{{ item.task }}</td>
             <td class="state">
               <!-- 状態変更ボタンのモック -->
-              <button>{{ item.state }}</button>
+              <button v-on:click="doChangeState(item)">{{ item.state }}</button>
             </td>
             <td class="button">
               <!-- 削除ボタンのモック -->
