タスクの削除機能を追加

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </td>
             <td class="button">
               <!-- 削除ボタンのモック -->
-              <button>削除</button>
+              <button v-on:click="doRemove(item)">削除</button>
             </td>
           </tr>
         </tbody>
